# utils

./: LICENSE
.github/: dependabot.yml
.github/workflows/: linter.yml
obsidian/: README.md  config.yaml-default  obsidian_auto_tagger.py  pyproject.toml  readwise_tag_sync.py  tag_utils.py
obsidian/obsidian_tools/: __init__.py  obsidian_auto_tagger.py  readwise_tag_sync.py  tag_utils.py
